--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
                 <button class="form-submit">Đăng ký</button>
             </form>
-
+            <div class="popup-confirm">
+                <p>Đăng kí thành công</p>
+            </div>
         </div>
         <script src="./script/script.js"></script>
         <script>
