--- a/index.html
+++ b/index.html
@@ -11,10 +11,7 @@
 
             <form action method="POST" class="form" id="form-1">
                 <h3 class="heading">Thành viên đăng ký</h3>
-
-                <div class="spacer"></div>
-
-                <div class="form-group">
+                <div class="form-group spacer">
                     <label for="fullname" class="form-label">Tên đầy đủ</label>
                     <input id="fullname" name="fullname" type="text"
                         placeholder="VD: Le Van Bao" class="form-control">
